--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -1371,7 +1371,7 @@
   "Message_HideType_ru": "Hide \"User Removed\" messages",
   "Message_HideType_uj": "Hide \"User Join\" messages",
   "Message_HideType_ul": "Hide \"User Leave\" messages",
-  "Message_Ignored": "This message was ignored",
+  "Message_Ignored": ".",
   "Message_info": "Message info",
   "Message_KeepHistory": "Keep Per Message Editing History",
   "Message_MaxAll": "Maximum Channel Size for ALL Message",
